debug-storybook.log
[18:11:20.710] [INFO] storybook v10.2.9
[18:11:20.766] [ERROR] [38;2;241;97;97mSB_CORE-SERVER_0007 (MainFileEvaluationError): Storybook couldn't evaluate your [33m.storybook/main.js[39m file.

Original error:
[37m/.storybook/main.js:18
export default config;
^^^^^^

SyntaxError: Unexpected token 'export'
    at wrapSafe (node:internal/modules/cjs/loader:1735:18)
    at Module._compile (node:internal/modules/cjs/loader:1778:20)
    at Object..js (node:internal/modules/cjs/loader:1936:10)
    at Module.load (node:internal/modules/cjs/loader:1525:32)
    at Module._load (node:internal/modules/cjs/loader:1327:12)
    at TracingChannel.traceSync (node:diagnostics_channel:328:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:245:24)
    at loadCJSModuleWithModuleLoad (node:internal/modules/esm/translators:339:3)
    at ModuleWrap.<anonymous> (node:internal/modules/esm/translators:242:7)
    at ModuleJob.run (node:internal/modules/esm/module_job:430:25)[39m[39m
    at loadMainConfig (file://./node_modules/storybook/dist/_node-chunks/chunk-UT3WQUMU.js:11709:11)
    at async buildDevStandalone (file://./node_modules/storybook/dist/core-server/index.js:7518:16)
    at async withTelemetry (file://./node_modules/storybook/dist/_node-chunks/chunk-YZM6KGCT.js:218:12)
    at async dev (file://./node_modules/storybook/dist/bin/core.js:2734:3)
    at async _Command.<anonymous> (file://./node_modules/storybook/dist/bin/core.js:2803:92)
[18:11:20.768] [WARN] Broken build, fix the error above.
You may need to refresh the browser.
[18:11:20.769] [WARN]   Failed to load preset: "/Users/dirkjankraan/Desktop/sparkles-design-system/.storybook/main.js"
[18:11:20.770] [ERROR] ./.storybook/main.js:18
export default config;
^^^^^^

[38;2;241;97;97mSyntaxError: Unexpected token 'export'[39m
    at wrapSafe (node:internal/modules/cjs/loader:1735:18)
    at Module._compile (node:internal/modules/cjs/loader:1778:20)
    at Object..js (node:internal/modules/cjs/loader:1936:10)
    at Module.load (node:internal/modules/cjs/loader:1525:32)
    at Module._load (node:internal/modules/cjs/loader:1327:12)
    at TracingChannel.traceSync (node:diagnostics_channel:328:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:245:24)
    at loadCJSModuleWithModuleLoad (node:internal/modules/esm/translators:339:3)
    at ModuleWrap.<anonymous> (node:internal/modules/esm/translators:242:7)
    at ModuleJob.run (node:internal/modules/esm/module_job:430:25)